# cpp-mps-parser

./: .cursorrules  .gitignore  CMakeLists.txt  README.md  build.sh  env.sh  parse_all_mps.sh  parse_first_mps.sh  pyproject.toml  test.sh  ui.py
docs/: plan.md  todos.md
src/: CMakeLists.txt  lp_data.cpp  lp_data.h  mps_parser.cpp  mps_parser.h  mps_reader.cpp  mps_reader.h  parquet_writer.cpp  parquet_writer.h  parse_and_save.cpp
tests/: CMakeLists.txt  test_eigen.cpp  test_mps.cpp  test_parquet.cpp
